The following list contains all changes to pgAdmin III, as present in svn. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could damage files.
    <li>2006-05-03 DP  1.4.3  Use the correct encoding in the View Data filter options per Ferenc.
    <li>2006-05-02 DP  1.4.3  Add an accelerator key (Delete) for deleting rows in the edit grid, per Emil Nowak.
    <li>2006-04-28 DP  1.4.3  Ensure the user is warned if files cannot be written.
    <li>2006-03-20 DP  1.4.3  Install PkgInfo into the Contents directory in the OSX appbundle, per John DeSoi.
    <li>2006-03-20 DP  1.4.3  Detect and correctly use GNU vs. BSD xargs when completing an appbundle install, per John DeSoi.
    <li>2006-02-21 DP  1.4.2  Fix a typo in the admin pack README [August Zajonc]
    <li>2006-02-17 DP  1.4.2  Mask the password when logging the connection string.
    <li>2006-02-17 DP  1.4.2  Properly escape single quotes in connection strings.
    <li>2006-02-08 DP  1.4.2  Re-arrange the Win32 dependencies so that iconv, libxml2 and wxwidgets are located in $PGADIR/../pgadmin3-deps/
    <li>2006-02-05 DP  1.4.2  Properly enable the redo button in the Query Tool when appropriate, per PromoTrade
    <li>2006-01-30 DP  1.4.2  Add missing files to the Unix tarball, per Andrus - xtra/wxbuild/*, src/utils/precomp.cpp, src/main/pgAdmin3.rc
    <li>2006-01-23 MH  1.4.2  Read config files in the local encoding scheme
    <li>2006-01-17 DP  1.4.2  Display the defintion of set returning procedures correctly.
    <li>2006-01-17 DP  1.4.2  Fix drop procedure by including IN/OUT parameter flags in the name.