@@ -19,6 +19,7 @@ The following list contains all changes to pgAdmin III, as present in svn.
 </ul>
 <br>
 <ul>
+    <li>2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate permissions to create roles and DBs.
     <li>2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could damage files.
     <li>2006-05-03 DP  1.4.3  Use the correct encoding in the View Data filter options per Ferenc.
     <li>2006-05-02 DP  1.4.3  Add an accelerator key (Delete) for deleting rows in the edit grid, per Emil Nowak.
